# osrm-backend

./: .gitignore  CMakeLists.txt  package.json
docs/doc_ruda/: ProcessingFlow-old.md  osrm.md  out.json
example/: CMakeLists.txt  example.cpp
features/car/: weights.feature
include/engine/datafacade/: contiguous_internalmem_datafacade_base.hpp
include/engine/routing_algorithms/: RouteDistribution.hpp
include/extractor/: edge_based_node.hpp
include/util/: csv_reader.hpp  static_rtree.hpp  typedefs.hpp
src/tools/: CMakeLists.txt  RouteDistribution.cpp  ShortestPathForest.cpp
